--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
             <td>
                 <p class="mb-0">
                     <span
-                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Ashish Yadav</span>
+                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Shubham
+                        Salvi</span>
                     <br>
                     <span
-                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Jr. UI/UX Executive</span>
+                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Head
+                        Web Developer | Team leader</span>
                     <!-- <strong style="font-size: 15px;">Executive Vice
                         President</strong> -->
                 </p>
@@ -214,10 +216,10 @@
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
                         style="padding: 0 0px;" />
-                    <a href="tel:+91 9820384039"
+                    <a href="tel:+91 9146624843"
                         style="color: black;text-decoration: none;font-size: 11pt;font-family: 'Open Sans', sans-serif;">M.
                         +91
-                        9820384039 </a>
+                        9146624843 </a>
                 </p>
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
