--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@
             <td>
                 <p class="mb-0">
                     <span
-                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Shubham
-                        Salvi</span>
+                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Manish
+                        Saun</span>
                     <br>
                     <span
-                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Head
-                        Web Developer | Team leader</span>
+                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Executive Vice President</span>
                     <!-- <strong style="font-size: 15px;">Executive Vice
                         President</strong> -->
                 </p>
@@ -216,10 +215,10 @@
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
                         style="padding: 0 0px;" />
-                    <a href="tel:+91 9146624843"
+                    <a href="tel:+91 9920106756"
                         style="color: black;text-decoration: none;font-size: 11pt;font-family: 'Open Sans', sans-serif;">M.
                         +91
-                        9146624843 </a>
+                        9920106756 </a>
                 </p>
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
