--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>
 
 <body>
-    <table class="mt-5">
+    <table class="mt-5" style="white-space: nowrap;">
         <tr>
             <td class="border-end">
                 <a href="https://www.ditechcdm.com/">
@@ -156,11 +156,10 @@
             <td>
                 <p class="mb-0">
                     <span
-                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Manish
-                        Saun</span>
+                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Ashish Yadav</span>
                     <br>
                     <span
-                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Executive Vice President</span>
+                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">UI UX Executive</span>
                     <!-- <strong style="font-size: 15px;">Executive Vice
                         President</strong> -->
                 </p>
@@ -215,10 +214,10 @@
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
                         style="padding: 0 0px;" />
-                    <a href="tel:+91 9920106756"
+                    <a href="tel:+91 9820384039"
                         style="color: black;text-decoration: none;font-size: 11pt;font-family: 'Open Sans', sans-serif;">M.
                         +91
-                        9920106756 </a>
+                        9820384039 </a>
                 </p>
                 <p class="data-row">
                     <img style="margin-left: 1px;" src='smartphone.png' height="14" alt="telephone icon"
