--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <tr>
             <td class="border-end">
                 <a href="https://www.ditechcdm.com/">
-                    <img src="https://www.ditechcdm.com/Images/Logo/DiTech%20Logo%20DM_Final%20(1).png" width="150" height="60"
+                    <img src="https://www.ditechcdm.com/Assets/Images/DiTech%20Logo%20DM_Final%20(1).png" width="150" height="60"
                         alt="DiTech Logo" style="margin-right: 30px;margin-left: 5px;" />
                 </a>
                 <p class="social-row" style="margin-top: 30px">
