--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             <td>
                 <p class="mb-0">
                     <span
-                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Ashish Yadav</span>
+                        style="color: #2a2881;font-weight: bold;font-size: 11pt;line-height: 10px;margin-left: 3px;">Manish Saun</span>
                     <br>
                     <span
-                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">UI UX Executive</span>
+                        style="font-weight: bold;margin-top: -2rem !important;font-size: 11pt !important;margin-left: 3px;">Executive Vice President</span>
                     <!-- <strong style="font-size: 15px;">Executive Vice
                         President</strong> -->
                 </p>
